--- a/app/design/frontend/pc/default/template/catalog/navigation/left.phtml
+++ b/app/design/frontend/pc/default/template/catalog/navigation/left.phtml
@@ -21,7 +21,7 @@
 <?php if($_count):?>
     <div class="box_shadow">
         <div class="category_name_bottom">
-            <span><?php echo Mage::registry('current_category')->getName(); ?> Related Categories</span>
+            <h3><?php echo Mage::registry('current_category')->getName(); ?> Related Categories</h3>
         </div>
         <div class="catalog_children">
             <ol>
