--- a/app/design/frontend/pc/default/template/page/home/products.phtml
+++ b/app/design/frontend/pc/default/template/page/home/products.phtml
@@ -6,7 +6,7 @@
                             ->addAttributeToFilter('visibility', 4);
 ?>
 <?php if($Hot_Selling_Products->count()>0):?>
-    <div class="home_product_title">Hot Selling Products</div>
+    <div class="home_product_title"><h3>Hot Selling Products</h3></div>
     <div class="home_product Hot_Selling_Products owl-carousel">
         <?php foreach($Hot_Selling_Products as $_product):?>
 
@@ -45,7 +45,7 @@
                             ->addAttributeToFilter('visibility', 4);
 ?>
 <?php if($New_Arrival_Products->count()>0):?>
-    <div class="home_product_title">Low Price Products</div>
+    <div class="home_product_title"><h3>Low Price Products</h3></div>
     <div class="home_product New_Arrival_Products owl-carousel">
         <?php foreach($New_Arrival_Products as $_product):?>
 
