--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -38,6 +38,7 @@
             .product-name{
                 h2{
                     text-transform:Capitalize;
+                    font-size:15px;
                 }
             }
 
