--- a/app/design/frontend/pc/default/template/page/html/footer.phtml
+++ b/app/design/frontend/pc/default/template/page/html/footer.phtml
@@ -3,14 +3,14 @@
         <div class="join_us">
             <h2>Join our community</h2>
             <ul>
-                <li class="mini-facebook"><a href=""></a></li>
-                <li class="mini-instagram"><a href=""></a></li>
-                <li class="mini-pinterest"><a href=""></a></li>
-                <li class="mini-youtube"><a href=""></a></li>
-                <li class="mini-twitter"><a href=""></a></li>
-                <li class="mini-tumbler"><a href=""></a></li>
-                <li class="mini-blog"><a href=""></a></li>
-                <li class="mini-vk"><a href=""></a></li>
+                <li class="mini-facebook"><a href="https://www.facebook.com/Ddaydressonline/"></a></li>
+                <li class="mini-instagram"><a href="https://www.instagram.com/ddaydress/"></a></li>
+                <li class="mini-pinterest"><a href="https://www.pinterest.com/ddaydress/"></a></li>
+                <li class="mini-youtube"><a href="https://www.youtube.com/channel/UCFXTTCjX3wrvgJMYiqwZXew"></a></li>
+                <li class="mini-twitter"><a href="https://twitter.com/ddaydress"></a></li>
+                <li class="mini-tumbler"><a href="https://www.tumblr.com/blog/ddaydress"></a></li>
+                <li class="mini-blog"><a href="http://ddaydresscoupon.blogspot.com/"></a></li>
+                <li class="mini-vk"><a href="http://new.vk.com/ddaydress"></a></li>
             </ul>
         </div>
         <div class="customer_help">
