--- a/app/design/frontend/pc/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list/toolbar.phtml
@@ -1,3 +1,62 @@
-<?php if($this->getCollection()->getSize()): ?>
-    <?php echo $this->getPagerHtml() ?>
+<?php if($this->getCollection()->getSize()):?>
+
+    <?php  //echo $this->getPagerHtml() ?>
+
+    <?php
+
+    function convertUrlQuery($query)
+    {
+        $queryParts = explode('&', $query);
+        $params = array();
+        foreach ($queryParts as $param)
+        {
+            $item = explode('=', $param);
+            $params[$item[0]] = $item[1];
+        }
+        return $params;
+    }
+
+    $pagehtml = $this->getPagerHtml();
+
+    $request_uri = $_SERVER['REQUEST_URI'];
+    $pagehtml = str_replace('&amp;','&',$pagehtml);
+    $pagehtml = str_replace('.html&','.html?',$pagehtml);
+
+    $preurl = $request_uri;
+    $exturl = '';
+    if(strpos($preurl,'?')!==false){
+        $temparr = explode('?',$preurl);
+        $preurl = $temparr[0];
+        $exturl = '?'.$temparr[1];
+        $request_uri = $preurl;
+    }
+    $temparr = explode('/',$request_uri);
+    $endhtml = end($temparr);
+    $curpage = str_replace('.html','',$endhtml);
+    if($curpage>0){
+        $preurl = str_replace($curpage.'.html','',$preurl);
+    }else{
+        $preurl = str_replace('.html','',$preurl);
+    }
+
+    $preurl = 'http://'.$_SERVER['SERVER_NAME'].$preurl;
+    $preurl = trim($preurl,'/');
+
+    if(preg_match_all('/<a href="(.*?)">(\d+)<\/a>/is',$pagehtml,$matches)) {
+        $urllist = array();
+        $urlsp = 'narrow/';
+        $rooturl = Mage::getBaseUrl('web');
+        $rooturl = trim($rooturl, '/');
+        if (count($matches[1]) == 0) {
+            $urlsp = '';
+        }
+        foreach ($matches[1] as $k => $v) {
+            if ($matches[2][$k] == 1) continue;
+            $tempurl = $preurl . '/' . $matches[2][$k] . '.html';
+            $pagehtml = str_replace($v, $tempurl, $pagehtml);
+        }
+        echo $pagehtml;
+    }
+    ?>
+
 <?php endif ?>
