--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -353,9 +353,14 @@
             jQuery(".size_"+unit).siblings("select").prop('disabled',true).hide();
         });
 
-        jQuery('.input-box[data-title="Time"]').click(function(){
+
+        jQuery('dl[data-title="Time"]').mouseover(function(){
             jQuery('.jCalcontainer').show();
         });
+        jQuery('dl[data-title="Time"]').mouseout(function(){
+            jQuery('.jCalcontainer').hide();
+        });
+
 
         jQuery("#container").on('click','.day',function(e){
             var e_target = jQuery(e.target);
