--- a/app/design/frontend/pc/default/template/helpcenter/left.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/left.phtml
@@ -10,6 +10,7 @@
         <dd><a rel="nofollow" href="<?php echo $this->getUrl('size-chart')?>">Size Chart</a></dd>
         <dd><a rel="nofollow" href="<?php echo $this->getUrl('color-chart')?>">Color Chart</a></dd>
         <dd><a rel="nofollow" href="<?php echo $this->getUrl('measurement')?>">Measurement</a></dd>
+        <dd><a rel="nofollow" href="<?php echo $this->getUrl('catalog/seo_sitemap/category')?>">Site Map</a></dd>
     </dl>
     <dl>
         <dt>SHIPPING & DELIVERY</dt>
