--- a/app/design/frontend/pc/default/template/catalog/seo/sitemap/container.phtml
+++ b/app/design/frontend/pc/default/template/catalog/seo/sitemap/container.phtml
@@ -1,6 +1,12 @@
 
 <div class="MT10 MB10 helpcenter">
-    <?php echo $this->getChildHtml('help_left');?>
+    <div class="help_left">
+        <?php echo $this->getChildHtml('help_left');?>
+        <script>
+            var pathname =  window.location.pathname;
+            jQuery("a[href*='"+pathname+"']").css("color","#f39");
+        </script>
+    </div>
     <div class="help_right">
         <div class="page-sitemap">
 
