/email/account_new

--- a/skin/frontend/base/default/css/email-non-inline.css
+++ b/skin/frontend/base/default/css/email-non-inline.css
@@ -110,7 +110,7 @@
 .method-info h6,
 .address-details h6,
 .closing-text {
-  color: #3696c2 !important;
+  color: #000 !important;
 }
 
 td.order-details h3,
