--- a/app/locale/en_US/template/email/account_new.html
+++ b/app/locale/en_US/template/email/account_new.html
@@ -1,42 +1,54 @@
-<!--@subject Welcome, {{var customer.name}}! @-->
+<!--@subject Thanks for your registration at {{var store.getFrontendName()}},we are waiting for you. @-->
 <!--@vars
-{"store url=\"\"":"Store Url",
+{
+"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
 "htmlescape var=$customer.name":"Customer Name",
 "store url=\"customer/account/\"":"Customer Account Url",
 "var customer.email":"Customer Email",
-"htmlescape var=$customer.password":"Customer Password"}
+"htmlescape var=$customer.password":"Customer Password"
+}
 @-->
 
 <!--@styles
 @-->
 
 {{template config_path="design/email/header"}}
-{{inlinecss file="email-inline.css"}}
 
-<table cellpadding="0" cellspacing="0" border="0">
+
+<table cellpadding="0" cellspacing="0" border="0" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; border-collapse: collapse; padding: 0; margin: 0; width: 100%;">
     <tr>
-        <td class="action-content">
-            <h1>Welcome to {{var store.getFrontendName()}}.</h1>
-            <p>To log in when visiting our site just click <a href="{{store url="customer/account/"}}">Login</a> or <a href="{{store url="customer/account/"}}">My Account</a> at the top of every page, and then enter your email address and password.</p>
-            <p class="highlighted-text">
-                Use the following values when prompted to log in:<br/>
-                <strong>Email</strong>: {{var customer.email}}<br/>
-                <strong>Password</strong>: {{htmlescape var=$customer.password}}
-            </p>
-            <p>When you log in to your account, you will be able to do the following:</p>
-            <ul>
-                <li>Proceed through checkout faster when making a purchase</li>
-                <li>Check the status of orders</li>
-                <li>View past orders</li>
-                <li>Make changes to your account information</li>
-                <li>Change your password</li>
-                <li>Store alternative addresses (for shipping to multiple family members and friends!)</li>
-            </ul>
+        <td style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 10px 20px 15px; margin: 0; line-height: 18px;">
+
+            {{var menu}}
+
             <p>
-                If you have any questions, please feel free to contact us at
-                <a href="mailto:{{var store_email}}">{{var store_email}}</a>
-                {{depend store_phone}} or by phone at <a href="tel:{{var phone}}">{{var store_phone}}</a>{{/depend}}.
+                Dear {{var customer.name}},
+            </p>
+            <p>
+                Welcome to <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a>.
+            </p>
+            <p>
+                The account you just registered will store your personal and payment information securely,which will allow you to purchase items easily and safety at <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a>.
+            </p>
+            <p>
+                Thanks a lot for your registration!
+            </p>
+            <p>
+                After your registration,you can order your favorite and new fashion trends in wedding dresses,wedding party dresses and special occasion dresses at <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a>.Choose your own chic fashion right away!Go shopping.
+            </p>
+
+            {{var hot_categories}}
+
+            <p>
+                Thanks again for choosing us.We hope you enjoy the shopping experience at <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a>.
+            </p>
+            <p>
+                For any further information or you have any questions,please <a style="color:#f39;text-decoration: none;" href="mailto:{{var store_email}}">contact us</a>.
+            </p>
+            <p>
+                Best Regards<br>
+                <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a> Team
             </p>
         </td>
     </tr>
