--- a/app/locale/en_US/template/email/html/header.html
+++ b/app/locale/en_US/template/email/html/header.html
@@ -8,38 +8,28 @@
 <body>
 {{var non_inline_styles}}
 <!-- Begin wrapper table -->
-<table width="100%" cellpadding="0" cellspacing="0" border="0" id="background-table">
+<table width="100%" cellpadding="0" cellspacing="0" border="0" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; border-collapse: collapse; padding: 0; margin: 0 auto; background-color: #fff; font-size: 12px;">
     <tr>
-        <td valign="top" class="container-td" align="center">
-            <table cellpadding="0" cellspacing="0" border="0" align="center" class="container-table">
+        <td valign="top" style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 0; margin: 0; width: 100%;" align="center">
+            <table cellpadding="0" cellspacing="0" border="0" align="center" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; border-collapse: collapse; padding: 0; margin: 0 auto; width: 90%;">
                 <tr>
-                    <td>
-                        <table cellpadding="0" cellspacing="0" border="0" class="logo-container">
+                    <td style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 0; margin: 0;">
+                        <table cellpadding="0" cellspacing="0" border="0" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; border-collapse: collapse; padding: 0; margin: 0; width: 100%;">
                             <tr>
-                                <td class="logo">
-                                    <a href="{{store url=""}}">
-                                        <img
-                                            {{if logo_width}}
-                                            width="{{var logo_width}}"
-                                            {{else}}
-                                            width="165"
-                                            {{/if}}
-
-                                            {{if logo_height}}
-                                            height="{{var logo_height}}"
-                                            {{else}}
-                                            height="48"
-                                            {{/if}}
-
-                                            src="{{var logo_url}}"
-                                            alt="{{var logo_alt}}"
-                                            border="0"/>
+                                <td style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 15px 0px 10px 5px; margin: 0;">
+                                    <a href='{{store url=""}}' style="color: #3696c2; float: left; display: block;">
+                                        <img src="{{var logo_url}}" alt="{{var logo_alt}}" border="0" style="-ms-interpolation-mode: bicubic; outline: none; text-decoration: none;"/>
                                     </a>
+                                </td>
+                                <td style="font-family: Verdana, Arial;font-weight: normal;border-collapse: collapse;vertical-align: bottom;padding: 0 0 20px 0;margin: 0;text-align: right;">
+                                    <a href='{{store url=""}}' style="color: #000;text-decoration: none;">Home</a> |
+                                    <a href='{{store url="customer/account/"}}' style="color: #000;text-decoration: none;">My Account</a> |
+                                    <a href='{{store url="help"}}' style="color: #000;text-decoration: none;">Help</a>
                                 </td>
                             </tr>
                         </table>
                     </td>
                 </tr>
                 <tr>
-                    <td valign="top" class="top-content">
+                    <td valign="top" style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 5px; margin: 0; border: 2px solid #000; background: #FFF;">
                     <!-- Begin Content -->
