--- a/skin/frontend/base/default/css/email-inline.css
+++ b/skin/frontend/base/default/css/email-inline.css
@@ -1,8 +1,33 @@
+/**
+ * Magento
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the Academic Free License (AFL 3.0)
+ * that is bundled with this package in the file LICENSE_AFL.txt.
+ * It is also available through the world-wide-web at this URL:
+ * http://opensource.org/licenses/afl-3.0.php
+ * If you did not receive a copy of the license and are unable to
+ * obtain it through the world-wide-web, please send an email
+ * to license@magento.com so we can send you a copy immediately.
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade Magento to newer
+ * versions in the future. If you wish to customize Magento for your
+ * needs please refer to http://www.magento.com for more information.
+ *
+ * @category    design
+ * @package     base_default
+ * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
+ * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ */
+/* ============================================ *
+ * General Styles
+ * ============================================ */
 body, table.body, th, h1, h2, h3, h4, h5, h6, td, p, strong {
-  font-family: "lucida Grande",Verdana,"Microsoft YaHei";
+  font-family: Verdana, Arial;
   font-weight: normal;
-  font-size: 12px;
-      color: #444;
 }
 
 body {
@@ -10,7 +35,7 @@ body {
   padding: 0;
   text-align: left;
   color: #333333;
-  background-color: #fff;
+  background-color: #ebebeb;
 }
 
 body {
@@ -28,7 +53,7 @@ img {
 }
 
 body {
-  background: #fff;
+  background: #ebebeb;
   font-size: 12px;
   margin: 0;
   padding: 0;
@@ -44,7 +69,7 @@ table td {
 }
 
 a {
-  color: #3696c2;
+  color: #000;
 }
 
 .cell-content.product-info,
@@ -57,13 +82,13 @@ a {
 
 html,
 #background-table {
-  background-color: #fff;
+  background-color: #ebebeb;
 }
 
 #background-table {
-        font-size: 12px;
-        margin: 5px auto;
-        padding: 0;
+  font-size: 12px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .container-td {
@@ -71,7 +96,7 @@ html,
 }
 
 .container-table {
-  width: 100%;
+  width: 600px;
   margin: 0 auto;
 }
 
@@ -79,9 +104,9 @@ html,
  * Header Styles
  * ============================================ */
 .top-content {
-  background: #333;
-  padding: 2px;
-  margin-bottom:5px;
+  border: 1px solid #ebebeb;
+  background: #FFF;
+  padding: 5px;
 }
 
 table.logo-container {
@@ -104,6 +129,7 @@ td.logo img {
 
 td.email-heading {
   padding: 0 1%;
+  background: #e1f0f8;
   border-right: 1px dashed #c3ced4;
   text-align: center;
   width: 58%;
@@ -124,6 +150,7 @@ td.email-heading p {
 
 td.store-info {
   padding: 2%;
+  background: #e1f0f8;
   width: 40%;
 }
 
@@ -139,21 +166,13 @@ td.store-info p {
 }
 
 td.store-info a {
-  text-decoration: underline;
-  color: #3696c2;
-}
-
-.valign_bottom{
-  vertical-align: bottom;
-  padding-bottom: 5px;
+  text-decoration: none;
+  color: #000;
 }
 
 /* ============================================ *
  * Content - Styles
  * ============================================ */
-.main_body{
-    background:#fff;
-}
 td.order-details {
   padding: 5px 15px;
   text-align: center;
@@ -209,7 +228,7 @@ td.order-details p {
 .product-info a.product-name {
   font-weight: 700;
   text-transform: uppercase;
-  color: #3696c2;
+  color: #000;
   text-decoration: none;
   vertical-align: middle;
   float: left;
@@ -314,9 +333,8 @@ td.order-details p {
 }
 
 .action-content {
-  padding:40px;
+  padding: 10px 20px 15px;
   line-height: 18px;
-  font-size: 16px;
 }
 
 .action-content h1 {
@@ -400,7 +418,7 @@ td.order-details p {
 }
 
 .action-button td {
-  background-color: #3696c2;
+  background-color: #000;
   color: #FFF;
   width: 100%;
   height: 40px;
@@ -527,7 +545,7 @@ table.social-button td {
 }
 
 table.button td {
-  background: #3696c2;
+  background: #000;
 }
 
 table.social-button td {
@@ -562,7 +580,7 @@ table.social-button td a {
 }
 
 .panel a {
-  color: #3696c2;
+  color: #000;
   text-decoration: none;
 }
 
@@ -729,56 +747,4 @@ p.sku {
 .price-box .price-excluding-tax,
 .price-box .price-including-tax {
   display: block;
-}
-
-
-.new_nav{
-  list-style: none; margin: 0; padding:0;
-}
-.new_nav li{
-  float:left;padding:0 5px;list-style: none;
-}
-.top_border li{
-  line-height: 18px;
-  border-right:1px solid #333;
-}
-
-.new_nav li.first{
-  padding-left:0;
-}
-.new_nav li.last{
-  border:0;
-}
-.new_nav li a{
-  color:#333;text-decoration: none;font-size: 16px;
-}
-
-.FL{
-  float:left;
-}
-.clear{
-  clear:both;
-}
-.MT10{
-  margin: 5px 0 5px 0;
-}
-.separate{
-  padding:0;
-}
-.storeFrontendName{
-  color:#f39;
-}
-.contactus{
-  color:#f39;text-decoration: none;  
-}
-.customer_email{
-  color:#444;
-  width:50px;height:15px;line-height:20px;overflow:hidden;display: inline-block;
-}
-
-.customer_email a{
-  color:#444;text-decoration: none;  
-}
-.BB{
-  border-bottom:1px dashed #333;
 }
