--- a/app/locale/en_US/template/email/account_password_reset_confirmation.html
+++ b/app/locale/en_US/template/email/account_password_reset_confirmation.html
@@ -1,4 +1,4 @@
-<!--@subject Password Reset Confirmation for {{var customer.name}} @-->
+<!--@subject Forgotten Password @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
@@ -11,22 +11,33 @@
 @-->
 
 {{template config_path="design/email/header"}}
-{{inlinecss file="email-inline.css"}}
 
-<table cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="0" cellspacing="0" border="0" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; border-collapse: collapse; padding: 0; margin: 0;">
     <tr>
-        <td class="action-content">
-            <h1>{{htmlescape var=$customer.name}},</h1>
-            <p>There was recently a request to change the password for your account.</p>
-            <p>If you requested this password change, please reset your password here:</p>
-            <table cellspacing="0" cellpadding="0" class="action-button" >
-                <tr>
-                    <td>
-                        <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}"><span>Reset Password</span></a>
-                    </td>
-                </tr>
-            </table>
-            <p>If you did not make this request, you can ignore this message and your password will remain the same.</p>
+        <td style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 10px 20px 15px; margin: 0; line-height: 18px;">
+            <p>
+                Dear {{var customer.email}}：
+            </p>
+            <p>
+                This email was sent automatically by <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a> in response to your request to recover your password.
+                Please <a style="color:#f39;text-decoration: none;" href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}">click here</a> to reset your password.
+            </p>
+            <p>
+                Any questions, please feel free to Contact Us:
+            </p>
+            <p>
+                If you did not forget your password, please ignore this email.
+            </p>
+            <p>
+                Best wishes,<br>
+                <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a> Customer Service Center
+            </p>
+            <p style="border-bottom:1px dashed #000;"></p>
+            <p>
+                Email:<a style="color:#f39;text-decoration: none;" href="mailto:{{var store_email}}">{{var store_email}}</a>
+                <br>
+                Website:<a style="color:#f39;text-decoration: none;" href="{{store url=""}}">{{store url=""}}</a>
+            </p>
         </td>
     </tr>
 </table>
