--- a/app/locale/en_US/template/email/sales/creditmemo_new_guest.html
+++ b/app/locale/en_US/template/email/sales/creditmemo_new_guest.html
@@ -20,10 +20,10 @@
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
 
-<table cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="0" cellspacing="0" border="0" style="width:100%;">
     <tr>
         <td>
-            <table cellpadding="0" cellspacing="0" border="0">
+            <table cellpadding="0" cellspacing="0" border="0" style="width:100%;">
                 <tr>
                     <td class="email-heading">
                         <h1>Thank you for your order from {{var store.getFrontendName()}}.</h1>
