--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -1,4 +1,4 @@
-<!--@subject {{var store.getFrontendName()}}: New Order # {{var order.increment_id}} @-->
+<!--@subject Thanks so much for your order at {{var store.getFrontendName()}}:  @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
@@ -21,38 +21,23 @@
 {{template config_path="design/email/header"}}
 {{inlinecss file="email-inline.css"}}
 
-<table cellpadding="0" cellspacing="0" border="0">
+<table cellpadding="0" cellspacing="0" border="0" style="width:100%;">
     <tr>
         <td>
-            <table cellpadding="0" cellspacing="0" border="0">
+            <table cellpadding="0" cellspacing="0" border="0" style="width:100%;">
                 <tr>
-                    <td class="email-heading">
-                        <h1>Thank you for your order from {{var store.getFrontendName()}}.</h1>
-                        <p>Once your package ships we will send an email with a link to track your order. Your order summary is below. Thank you again for your business.</p>
-                    </td>
-                    <td class="store-info">
-                        <h4>Order Questions?</h4>
+                    <td style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 0 1%; margin: 0; background: #e1f0f8; border-right: 1px dashed #c3ced4; text-align: center; width: 100%;">
+                        {{menu}}
                         <p>
-                            {{depend store_phone}}
-                            <b>Call Us:</b>
-                            <a href="tel:{{var phone}}">{{var store_phone}}</a><br>
-                            {{/depend}}
-                            {{depend store_hours}}
-                            <span class="no-link">{{var store_hours}}</span><br>
-                            {{/depend}}
-                            {{depend store_email}}
-                            <b>Email:</b> <a href="mailto:{{var store_email}}">{{var store_email}}</a>
-                            {{/depend}}
+                            Dear 姓名（下单时留下的姓名）
+                        </p>
+                        <p>
+                            Thank you for shopping on <a style="color:#f39;text-decoration: none;" href='{{store url=""}}'>{{var store.getFrontendName()}}</a>.We have received your order.
+                            We will contact you in 24 hours to confirm the order details with you,Please keep in touch by email.
                         </p>
                     </td>
                 </tr>
             </table>
-        </td>
-    </tr>
-    <tr>
-        <td class="order-details">
-            <h3>Your order <span class="no-link">#{{var order.increment_id}}</span></h3>
-            <p>Placed on {{var order.getCreatedAtFormated('long')}}</p>
         </td>
     </tr>
     <tr class="order-information">
@@ -64,7 +49,7 @@
                 </tr>
             </table>
             {{/if}}
-            {{layout handle="sales_email_order_items" order=$order}}
+
             <table cellpadding="0" cellspacing="0" border="0">
                 <tr>
                     <td class="address-details">
@@ -91,6 +76,32 @@
                     </td>
                 </tr>
             </table>
+
+            {{layout handle="sales_email_order_items" order=$order}}
+
+
+        </td>
+    </tr>
+    <tr>
+        <td class="order-details">
+
+
+            <h4>Order Questions?</h4>
+            <p>
+                {{depend store_phone}}
+                <b>Call Us:</b>
+                <a href="tel:{{var phone}}">{{var store_phone}}</a><br>
+                {{/depend}}
+                {{depend store_hours}}
+                <span class="no-link">{{var store_hours}}</span><br>
+                {{/depend}}
+                {{depend store_email}}
+                <b>Email:</b> <a href="mailto:{{var store_email}}">{{var store_email}}</a>
+                {{/depend}}
+            </p>
+
+            <h3>Your order <span class="no-link">#{{var order.increment_id}}</span></h3>
+            <p>Placed on {{var order.getCreatedAtFormated('long')}}</p>
         </td>
     </tr>
 </table>
