--- a/app/locale/en_US/template/email/html/header.html
+++ b/app/locale/en_US/template/email/html/header.html
@@ -23,8 +23,8 @@
                                 </td>
                                 <td style="font-family: Verdana, Arial;font-weight: normal;border-collapse: collapse;vertical-align: bottom;padding: 0 0 20px 0;margin: 0;text-align: right;">
                                     <a href='{{store url=""}}' style="color: #000;text-decoration: none;">Home</a> |
-                                    <a href='{{store url="customer/account/"}}' style="color: #000;text-decoration: none;">My Account</a> |
-                                    <a href='{{store url="help"}}' style="color: #000;text-decoration: none;">Help</a>
+                                    <a href='{{store url=""}}customer/account/' style="color: #000;text-decoration: none;">My Account</a> |
+                                    <a href='{{store url=""}}help/' style="color: #000;text-decoration: none;">Help</a>
                                 </td>
                             </tr>
                         </table>
