--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -1,4 +1,4 @@
-<!--@subject Thanks so much for your order at {{var store.getFrontendName()}}:  @-->
+<!--@subject Thanks so much for your order at {{var store.getFrontendName()}} @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
@@ -87,9 +87,11 @@
             </table>
             {{/if}}
 
-
         </td>
     </tr>
+
+
+
     <tr>
         <td class="order-details">
             <p>
@@ -108,6 +110,8 @@
             </p>
         </td>
     </tr>
+
+
 </table>
 
 {{template config_path="design/email/footer"}}
