--- a/app/design/frontend/pc/default/template/page/home/products.phtml
+++ b/app/design/frontend/pc/default/template/page/home/products.phtml
@@ -13,7 +13,7 @@
             <dl class="item">
                 <dt>
                     <a href="<?php echo $_product->getProductUrl() ?>">
-                        <img width="180" height="240" alt="<?php echo $_product->getName()?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(240,320); ?>">
+                        <img alt="<?php echo $_product->getName()?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(240,320); ?>">
                     </a>
                 </dt>
                 <dd>
@@ -52,7 +52,7 @@
             <dl class="item">
                 <dt>
                     <a href="<?php echo $_product->getProductUrl() ?>">
-                        <img width="180" height="240" alt="<?php echo $_product->getName()?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(240,320); ?>">
+                        <img alt="<?php echo $_product->getName()?>" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(240,320); ?>">
                     </a>
                 </dt>
                 <dd>
@@ -82,10 +82,10 @@
                         nav: true,
                         dots:false,
                         autoWidth:true,
-                        margin:15,
+                        margin:10,
                         autoplay: false
                     });
                 }
             });
         });
-    </script>
+</script>
