--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -8,7 +8,7 @@ body { font: 12px/1.55 Arial, Helvetica, sans-serif; color: #000000; text-align:
 
 img { border: 0; vertical-align: top; }
 
-a { color: #000; text-decoration: none; }
+a { color: #000; text-decoration: none; cursor: pointer; }
 
 a:hover { text-decoration: none; }
 
@@ -2822,10 +2822,10 @@ tr.summary-details-excluded { font-style: italic; }
 .page .product-view .product-shop .new-product-options-bottom .btns .validation-message .va_box .va_title { color: #444; border-bottom: 1px dashed #f39; text-align: center; }
 .page .product-view .product-shop .new-product-options-bottom .btns .validation-message .va_box .va_list li { color: #444; height: 24px; line-height: 24px; }
 .page .product-view .product-shop .new-product-options-bottom .btns .validation-message .va_box .va_list li em { width: 40%; padding-right: 10px; line-height: 20px; display: inline-block; text-align: right; color: #f39; }
-.page .product-view .product-shop .new-product-options-bottom .btns button.button { height: 35px; width: 170px; border-radius: 3px 0 0 3px; background-color: #f39; }
+.page .product-view .product-shop .new-product-options-bottom .btns button.button { height: 35px; width: 170px; border-radius: 3px; background-color: #f39; }
 .page .product-view .product-shop .new-product-options-bottom .btns button.button span span { font-size: 18px; font-weight: normal; }
-.page .product-view .product-shop .new-product-options-bottom .btns .wishlist { display: inline-block; height: 35px; width: 40px; border-left: 2px solid #fff; border-radius: 0 3px 3px 0; background-color: #f39; color: #fff; text-align: center; }
-.page .product-view .product-shop .new-product-options-bottom .btns .wishlist span { font-size: 30px; line-height: 35px; }
+.page .product-view .product-shop .new-product-options-bottom .btns .wishlist { display: inline-block; height: 35px; line-height: 35px; text-align: center; padding: 0 15px; color: #666; font-size: 15px; }
+.page .product-view .product-shop .new-product-options-bottom .btns .wishlist span { font-size: 30px; line-height: 30px; color: #f39; padding: 0 5px; }
 .page .product-view .new-product-collateral .dectits { border-bottom: 1px solid #cccccc; margin-bottom: 12px; text-align: center; height: 13px; }
 .page .product-view .new-product-collateral .dectits span { height: 25px; line-height: 25px; display: inline-block; padding: 0 5px; background-color: #f39; font-size: 14px; color: #fff; font-family: georgia; border-radius: 3px; font-weight: normal; text-transform: uppercase; margin-bottom: -12px; }
 .page .product-view .new-product-collateral .box-collateral h3.hua { font-size: 12px; background: url(../images/commont/dehua.png) no-repeat 0 center; padding-left: 12px; font-weight: bold; font-family: Verdana, Geneva, sans-serif; clear: both; margin: 20px 0 0; }
