--- a/app/design/frontend/pc/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/pc/default/template/persistent/customer/form/register.phtml
@@ -1,7 +1,7 @@
 <div class="account_before register">
     <?php echo $this->getChildHtml('form_fields_before')?>
     <?php echo $this->getChildHtml('customer.form.register.extra')?>
-    <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="form-validate">
+    <form action="<?php echo $this->getUrl('customer/account/createpost') ?>" method="post" id="form-validate">
         <div class="title">Register a New Account</div>
         <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
         <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
